# tollbooth-sample

./: .fastmcp.yaml  CHANGELOG.md  GETTING-STARTED.md  README.md  fastmcp.json  pyproject.toml  renovate.json  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: agentic-qa.yml  ci.yml  doctrine-lint.yml  publish-mcp-registry.yml  release.yml
constraints/: example_advanced.json  example_basic.json  example_surge.json
skills/bootstrap-dpyc-operator/: MAINTAINING.md  SKILL.md
skills/bootstrap-dpyc-operator/references/: canonical-pattern.md  onboarding-checklist.md  sessions-and-vaults.md  source-adapters.md
src/tollbooth_sample/: __init__.py  config.py  server.py  weather.py
tests/: conftest.py  test_credit_gating.py  test_operator_protocol.py  test_weather.py
